# Python-CrewAI

./: README.md
CrewAI Flow + Wikipedia + Nvidia API + LLM/: .env  main.py  pyproject.toml
CrewAI Flow + Wikipedia + Nvidia API + LLM + Google/: .env  main.py  pyproject.toml
CrewAI Flow + Wikipedia + Nvidia API + LLM + Google/crewai_flow.egg-info/: SOURCES.txt
CrewAI Flow + Wikipedia + Nvidia API + LLM +Google/crewai_flow.egg-info/: PKG-INFO
CrewAI Flow + Wikipedia + Nvidia API + LLM/crewai_flow.egg-info/: PKG-INFO  requires.txt
Ultimate CrewAI Flow/: .env  config.json  main.py  requirements.txt
