[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crewai_flow"
version = "0.1.0"
description = "A CrewAI flow for project management automation with Wikipedia and Nvidia integration."
authors = [
    { name = "Ali Haider Kasim", email = "alihaiderkasim1@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "nemo-toolkit>=1.23.0",
    "nvidia-riva-client>=2.18.0",
    "wikipedia>=1.4.0",
    "wikipedia-api>=0.8.1",
]